--- a/.github/workflows/get-release.yml
+++ b/.github/workflows/get-release.yml
@@ -2,7 +2,7 @@ name: Get latest release version
 on:
   workflow_dispatch:
   schedule:
-    - cron:  '0 10 * * *'
+    - cron:  '0 0 * * 0'
     
 jobs:
   get-version:
