--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,8 +3,9 @@ name: Publish Docker image
 on:
   workflow_dispatch:
   push:
-    branches:
-      - main
+    paths:
+      - 'Dockerfile'
+      - 'release-versions/*'
 
 jobs:
   push_to_registry:
