--- a/.github/workflows/get-release.yml
+++ b/.github/workflows/get-release.yml
@@ -22,6 +22,6 @@ jobs:
         if: steps.git-check.outputs.modified == 'true'
         run: |
           git config --global user.name 'Unusual Norm'
-          git config --global user.email 'unusualnorm@users.noreply.github.com'
+          git config --global user.email '40722525+UnusualNorm@users.noreply.github.com'
           git commit -am "New release version"
           git push
